--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
     <header>
         <img src="./assets/img/logo.svg" alt="Logo Epicode" class="logo">
-        <h2>EPICODE - IL BLOG DEI DEVELOPERS</h2>
+        <h1>EPICODE - IL BLOG DEI DEVELOPERS</h1>
         <h2><a href="index.html">⇒ HOME ⇐</a></h2>
         <h2><a href="index.html">⇒ ARTICOLI ⇐</a></h2>
         <h2><a href="index.html">⇒ LAVORA CON NOI ⇐</a></h2>
     </header>
     <br>
     <main>
-        <h1>Come creare un template per i post</h1>
+        <p class="big-title">Come creare un template per i post</p>
         <p class="article-stuff"><i class="fas fa-pen-square"></i> di Mario Rossi - <i class="fas fa-clock"></i>
             pubblicato il 25-10-2020</p>
         <p class="da decidere">La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le
@@ -31,9 +31,11 @@
         </p>
         <p>Le varie aree saranno quindi divise in:</p>
         <ul>
-            <li>Contenuti di intestazione del tag &lt;header&gt;</li>
-            <li>Contenuti centrali variabili del tag &lt;main&gt; (corpo principale)</li>
-            <li>Contenuti di fine pagina comuni, da inserire nel tag &lt;footer&gt;</li>
+            <li>Contenuti di intestazione del tag <span class="article-button">&lt;header&gt;</span></li>
+            <li>Contenuti centrali variabili del tag <span class="article-button">&lt;main&gt;</span>
+                (corpo principale)</li>
+            <li>Contenuti di fine pagina comuni, da inserire nel tag <span class="article-button">&lt;footer&gt;</span>
+            </li>
         </ul>
         <p>Formattazione del codice<br>
             Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <strong>selezionare con i
@@ -48,9 +50,9 @@
         <table>
             <thead>
                 <tr>
-                    <th>
+                    <p class="diffusione">
                         Diffusione dei CSS
-                    </th>
+                    </p>
                 </tr>
             </thead>
             <tr>
@@ -92,37 +94,36 @@
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
+        <!-- Da qui in poi aggiornare CSS e stile -->
         <div class="news">
             <h3>NOVITÀ</h3>
             <p>Vuoi rimanere aggiornato su altre novità del blog? Iscriviti alla nostra newsletter:</p>
-            <input class="emailbox" type="email" value="Inserisci la tua mail" /><button class="subscribe"
-                type="submit">Iscriviti!</button>
+            <input class="emailbox" type="email" value="Inserisci l'email" /><button class="subscribe"
+                type="submit"><b>Iscriviti!</b></button>
         </div>
         <div class="articles">
             <h3>ARTICOLI CORRELATI</h3>
-            <div class="articles-box">
-                <p>
-                    <a href="#">Validare il codice HTML</a><br>
-                    <i class="fas fa-tag"></i>
-                    Categoria: develop
-                </p>
-                <p class="articles-date"><i class="fas fa-calendar-alt"></i> Data: 18-9-2020</p>
-                <p>
-                    <a href="#">Correggere la sintassi</a><br>
-                    <i class="fas fa-tag"></i>
-                    Categoria: develop
-                </p>
-                <p class="articles-date"><i class="fas fa-calendar-alt"></i> Data: 16-9-2020</p>
-                <p>
-                    <a href="#">Meno Kb nella pagina</a><br>
-                    <i class="fas fa-tag"></i>
-                    Categoria: develop
-                </p>
-                <p class="articles-date"><i class="fas fa-calendar-alt"></i> Data: 30-9-2020</p>
-            </div>
+            <p class="articles-box">
+                <a href="#">Validare il codice HTML</a><br>
+                <i class="fas fa-tag"></i>
+                Categoria: develop
+            <p class="articles-date"><i class="fas fa-calendar-alt"></i> Data:
+                18-9-2020</p>
+            </p>
+            <p class="articles-box">
+                <a href="#">Correggere la sintassi</a><br>
+                <i class="fas fa-tag"></i>
+                Categoria: develop
+            <p class="articles-date"><i class="fas fa-calendar-alt"></i> Data: 16-9-2020</p>
+            <p class="articles-box">
+                <a href="#">Meno Kb nella pagina</a><br>
+                <i class="fas fa-tag"></i>
+                Categoria: develop
+            <p class="articles-date"><i class="fas fa-calendar-alt"></i> Data: 30-9-2020</p>
+            </p>
         </div>
     </main>
-    <footer>Blog Epicode C 2021<br>
+    <footer>Blog Epicode © 2021<br>
         Testata online di Mario Rossi, registrata con prot. n.213/2018 - via Luigi Einaudi 2 - Milano. P.IVA 00112233.
         <a href="mailto:info@epicode.school">info@epicode.school</a>
     </footer>
